--- a/about.qmd
+++ b/about.qmd
@@ -4,16 +4,13 @@ image: profile.jpg
 about:
   template: jolla
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
     - icon: linkedin
       text: LinkedIn
-      href: https://linkedin.com
+      href: https://www.linkedin.com/in/timothy-singh-a1255b121/
     - icon: github
       text: Github
-      href: https://github.com
+      href: https://github.com/SimplyTim
 
 ---
 
-About this blog
+This blog was created for the use of DSCI542 at University of British Columbia by Timothy Singh.
